# reorgfolder

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  nix-build.yml  publish.yml  release.yml
nix/: common.nix  cross-build.nix  homebrew-package.nix  pkgbuild.nix  tar-package.nix  window-build.nix
scripts/: export-linux-bin.sh  pack_homebrew.sh
src/: main.rs  move_file.rs
