[package]
name = "reorgfolder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
eyre = "0.6.8"
trash = "3.0.6"


[profile.release]
strip = true
opt-level = "s"
lto  = true
codegen-units = 1

[package.metadata.packager]
before-packaging-command = "cargo build --release"
formats = ["deb", "pacman"]
